# therobotoverlord

./: .augment-guidelines  .cursorrules  .gitignore  .pre-commit-config.yaml  .windsurfrules  LICENSE  LLM_RULES.md  README.md  SPEEDRUN.md  changes.diff  cookies.txt  justfile  openapi.json  openapi_formatted.json  render.yaml
backend/: README.md  gunicorn.conf.py  pyproject.toml
backend/docs/: authentication.md  content_structure.md
backend/e2e_tests/: README.md  conftest.py  manual_test_guide.md  test_auth_flow.py  test_post_flow.py
backend/e2e_tests/examples/: test_error_handling_example.py  whitelist_example.py
backend/migrations/models/: 0_20250524220304_auth_system_init.py  0_20250525121047_init.py  0_20250526130347_init.py  0_20250526143224_init.py  0_20250526172601_init.py  1_20250526130500_add_topic_tag.py  1_20250531093530_None.py  1_20250608134635_add_rejected_post.py  2_20250526132200_rename_topictag_table.py
backend/src/backend/: app.py  placeholder.py
backend/src/backend/converters/: __init__.py  pending_post_to_schema.py  post_to_schema.py  rejected_post_to_schema.py  tag_to_schema.py  topic_to_schema.py  user_event_to_schema.py  user_schema_to_response.py  user_session_to_schema.py  user_to_schema.py
backend/src/backend/db/: __init__.py  base.py  config.py
backend/src/backend/db_functions/: __init__.py
backend/src/backend/dominate_templates/: __init__.py  base.py  home.py  topics.py
backend/src/backend/repositories/: README.md  __init__.py  login_attempt_repository.py  post_repository.py  tag_repository.py  topic_repository.py  topic_tag_repository.py  user_event_repository.py  user_repository.py  user_session_repository.py
backend/src/backend/routes/: __init__.py  health.py
backend/src/backend/schemas/: admin.py  ai_analysis.py  health.py  password.py  pending_post.py  post.py  post_lookup.py  rejected_post.py  tag.py  token.py  topic.py  user.py  user_event.py  user_stats.py
backend/src/backend/tasks/: __init__.py  ai_moderation_task.py  session.py
backend/src/backend/utils/: admin_auth.py  api_auth.py  auth.py  constants.py  datetime.py  moderation_config.py  password.py  post_lookup.py  rate_limiter.py  role_check.py  settings.py  template_config.py  templates.py  thread_builder.py  version.py
backend/tests/: conftest.py  test_placeholder.py
backend/tests/converters/: test_pending_post_to_schema.py  test_post_to_schema.py  test_rejected_post_to_schema.py  test_tag_to_schema.py  test_topic_to_schema.py  test_user_event_to_schema.py  test_user_schema_to_response.py  test_user_session_to_schema.py  test_user_to_schema.py  test_user_to_schema_fixed.py
backend/tests/db/models/: test_login_attempt.py  test_pending_post.py  test_post.py  test_rejected_post.py  test_tag.py  test_topic.py  test_topic_tag.py  test_user.py  test_user_event.py  test_user_session.py
backend/tests/db_functions/ai_analysis/: test_create_ai_analysis.py  test_get_ai_analysis_by_id.py  test_get_ai_analysis_by_pending_post_id.py
backend/tests/db_functions/pending_posts/: test_approve_and_create_post.py  test_create_pending_post.py  test_get_pending_post_by_id.py  test_list_pending_posts.py  test_list_pending_posts_by_topic.py  test_list_pending_posts_by_topic_and_user.py  test_reject_pending_post.py
backend/tests/db_functions/posts/: test_create_post.py  test_delete_post.py  test_find_post_by_content.py  test_find_post_fixed_final.py  test_get_post_by_id.py  test_get_post_by_pending_post_id.py  test_get_reply_count.py  test_is_user_post_author.py  test_list_post_replies.py  test_list_posts.py  test_list_posts_by_topic.py  test_list_posts_by_user.py  test_update_post.py
backend/tests/db_functions/rejected_posts/: test_get_rejected_post_by_id.py  test_list_rejected_posts.py
backend/tests/db_functions/tags/: test_create_tag.py  test_delete_tag.py  test_get_or_create_tag_by_name.py  test_get_tag_by_id.py  test_get_tag_by_slug.py  test_list_tags.py  test_update_tag.py
backend/tests/db_functions/topic_tags/: test_add_tags_to_topic.py  test_create_topic_tag.py  test_delete_topic_tag.py  test_get_tags_for_topic.py  test_get_topic_tag.py  test_get_topics_for_tag.py  test_remove_tags_from_topic.py  test_set_topic_tags.py
backend/tests/db_functions/topics/: test_create_topic.py  test_delete_topic.py  test_get_topic_by_id.py  test_is_user_topic_author.py  test_list_topics.py  test_list_topics_by_tag_slug.py  test_update_topic.py
backend/tests/db_functions/user_events/: test_count_recent_failed_login_attempts.py  test_create_event.py  test_create_login_attempt.py  test_get_recent_failed_login_attempts.py  test_get_recent_login_attempts.py  test_get_user_events.py  test_list_login_attempts.py  test_log_account_lockout.py  test_log_login_failure.py  test_log_login_success.py  test_log_logout.py  test_log_password_change.py
backend/tests/db_functions/user_sessions/: test_cleanup_expired_sessions.py  test_create_session.py  test_create_user_session.py  test_deactivate_all_user_sessions.py  test_deactivate_session.py  test_delete_user_session.py  test_get_session_by_token.py  (+2 more)
backend/tests/dominate_templates/: test_base.py  test_home.py  test_topics.py
backend/tests/tasks/: test_ai_moderation_task.py  test_session.py
backend/tests/utils/: test_auth.py  test_datetime.py  test_moderation_config.py  test_password.py  test_version.py
(+376 files in other folders)
