[project]
name = "backend"
version = "0.1.0"
description = "The backend for the therobotoverlord project."
readme = "README.md"
authors = [{ name = "Joshua Szepietowski", email = "joshSzep@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "pydantic-ai-slim[logfire,openai]>=0.2.6",
    "pydantic-graph>=0.2.6",
    "pydantic-settings>=2.9.1",
    "tortoise-orm[accel,asyncpg]>=0.25.0",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "RET", "SIM", "ERA"]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=backend --cov-report=xml --cov-report=term"

[tool.mypy]
python_version = "3.12"
sources = ["backend"]
exclude = [".venv", "tests"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = ".venv"
exclude = [".venv", "tests"]
